--- a/fly.toml
+++ b/fly.toml
@@ -1,14 +1,15 @@
-# fly.toml app configuration file generated for pocket-fhir-dry-water-4469 on 2024-07-22T19:56:15-04:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+# fly.toml app configuration file generated for pocketfhir
 
-app = 'pocket-fhir-dry-water-4469'
+app = 'pocketfhir'
 primary_region = 'atl'
 kill_signal = 'SIGINT'
 kill_timeout = '5s'
 
 [build]
+
+[env]
+  AUTO_HTTPS = 'on'
+  PB_ENCRYPTION_KEY = 'y5E69SptuHgUzspVNipzjl9ZmsKVPkIH'
 
 [[mounts]]
   source = 'pb_data'
@@ -17,9 +18,9 @@ kill_timeout = '5s'
 [http_service]
   internal_port = 8090
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'off'
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
 
 [[services]]
@@ -41,10 +42,13 @@ kill_timeout = '5s'
     hard_limit = 25
     soft_limit = 20
 
-  [[services.tcp_checks]]
+  [[services.http_checks]]
     interval = '15s'
-    timeout = '2s'
-    grace_period = '1s'
+    timeout = '5s'
+    grace_period = '10s'
+    method = 'GET'
+    path = '/health'
+    protocol = 'http'
 
 [[vm]]
   memory = '1gb'
