--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   fhir_r4: 
-    path: ../../fhir/fhir_r4
+    path: ../../../fhir_r4
   pocketbase: ^0.18.1
   riverpod: ^2.5.1
   rxdart: ^0.28.0
